# data-migration

./: .env  .gitignore  README.md  init_owner.sql  pyproject.toml  setup.py
jobs/dwh/: dwh_define_star_schemas_dictionaries.py  dwh_populate_tables_star_schema.py  dwh_prototype_udf_utils.py  dwh_structure_tables_star_schema.py  ods_populate_tables_star_schema.py  ods_structure_tables_star_schema.py
jobs/kafka-consumer/: kafka_consume_topics_messages.py  kafka_consumer.py  kafka_process_data_schema_topics_messages.py  kafka_topic_messages_utils.py
jobs/ods/: dwh_bulk_massive_insertions_query.py  ods_define_star_schemas_dictionaries.py  ods_populate_tables_star_schema.py  ods_prototype_udf_utils.py  ods_structure_tables_star_schema.py  test.py  test_1.py
scripts/dwh/: dwh_populate_tables_star_schema.py  dwh_structure_tables_star_schema.py
scripts/infrastructure/: create_dwh_production_db.sql  restore_dwh_production.sql  trigger_backup_dwh_production.sql
scripts/infrastructure/dwh/: create_dwh_production_db.sql  init_login_and_owner.sql  restore_dwh_production.sql  trigger_backup_dwh_production.sql
scripts/infrastructure/files-storage/: store_files_into_blob_container_azure.py
scripts/infrastructure/files_storage/: store_files_into_blob_container_azure.py
scripts/kafka-consumer/: .env  kafka_consumer.py
scripts/measures/dwh/: dwh_create_and_bulk_massive_inserts_dim_contract_table.sql  (+12 more)
scripts/measures/dwh-supply-chain-queries/: garbage_rate.sql  machine_business_with_timestamp.sql  machine_business_with_timestamp_optimized.sql  part_produced.sql
